k8s/manifests/forecast-experience/istio/authn/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: forecast-experience
spec:
  mtls:
    mode: STRICT
