k8s/manifests/forecast-experience/istio/authn/destination-rules.yaml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: forecast-experience
spec:
  host: "*.forecast-experience.svc.cluster.local"   # scoped to this namespace's services
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
